# course_2py

./: Makefile  README.md  conftest.py  models_hw.py  my_dream.txt  pyproject.toml  test_utils.py  utils.py
.github/workflows/: test-study.yaml  testing-with-poetry.yaml
tests/: test_HW8.py  test_hw8.py
